--- a/views/profilePage.ejs
+++ b/views/profilePage.ejs
@@ -7,29 +7,40 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <% if (user) { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/profile"><%= user.firstName %></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">Logout</a>
+          </li>
+        <% } else { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Login</a>
+          </li>
+        <% } %>
+      </ul>
+    </div>
+  </nav>
+  
   <div class="container mt-5">
     <h1>User Profile</h1>
-    <% if (successMessage) { %>
-      <div class="alert alert-success"><%= successMessage %></div>
-    <% } %>
-    <% if (errorMessage) { %>
-      <div class="alert alert-danger"><%= errorMessage %></div>
-    <% } %>
-    <form id="profileForm" method="POST" action="/profile">
-      <div class="form-group">
-        <label for="name">Name</label>
-        <input type="text" class="form-control" id="name" name="name" value="<%= user.name %>" required>
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Profile Information</h5>
+        <p class="card-text"><strong>Name:</strong> <%= user.firstName +' '+user.lastName %></p>
+        <p class="card-text"><strong>Email:</strong> <%= user.email %></p>
+        <!-- <p class="card-text"><strong>Age:</strong> <%= user.age %></p> -->
+        <a href="/profile/edit" class="btn btn-primary">Edit Profile</a>
       </div>
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" class="form-control" id="email" name="email" value="<%= user.email %>" required>
-      </div>
-      <div class="form-group">
-        <label for="age">Age</label>
-        <input type="number" class="form-control" id="age" name="age" value="<%= user.age %>" required>
-      </div>
-      <button type="submit" class="btn btn-primary">Update Profile</button>
-    </form>
+    </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
