--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,7 +11,7 @@
           <a class="nav-link" aria-current="page" href="/home">Home</a>
         </li>
         <li class="nav-item mx-2">
-          <a class="nav-link" href="/search">Find Hotel</a>
+          <a class="nav-link" href="/search-hotels">Find Hotel</a>
         </li>
         <li class="nav-item mx-2">
           <a class="nav-link" href="/mybookings">My Bookings</a>
