--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -31,14 +31,7 @@
                     <% } %>
 
                   <form id="loginForm">
-                    
-          
-                    <div class="d-flex align-items-center mb-3 pb-1">
-                      <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
-                      <span class="h1 fw-bold mb-0">Logo</span>
-                    </div>
-                 
-                    <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
+                    <h4 class="fw-bold mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h4>
 
                     <div class="form-outline mb-4">
                       <input type="email" id="loginEmail" class="form-control form-control-lg" name="email" required />
@@ -65,13 +58,11 @@
                       <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
                     </div>
 
-                    <a class="small text-muted" href="#!">Forgot password?</a>
+                    <!-- <a class="small text-muted" href="#!">Forgot password?</a> -->
                     <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="/register"
                         style="color: #393f81;">Register here</a></p>
-                    <a href="#!" class="small text-muted">Terms of use.</a>
-                    <a href="#!" class="small text-muted">Privacy policy</a>
+                  
                   </form>
-
                 </div>
               </div>
             </div>
