--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary shadow mb-3">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img style="height: 2rem;" src="/images/stayhub logo.png" alt="Stayhub Logo"></a>
+    <a class="navbar-brand" href="/home"><img style="height: 2rem;" src="/images/stayhubLogo.png" alt="Stayhub Logo"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -17,7 +17,7 @@
           <a class="nav-link" href="/mybookings">My Bookings</a>
         </li>
         <li class="nav-item mx-2">
-          <a class="nav-link" href="/about">About Us</a>
+          <a class="nav-link" href="/aboutUs">About Us</a>
         </li>
         <% if (user) { %>
           <li class="nav-item mx-2">
