--- a/views/profilePage.ejs
+++ b/views/profilePage.ejs
@@ -7,42 +7,20 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <% if (user) { %>
-          <li class="nav-item">
-            <a class="nav-link" href="/profile"><%= user.firstName %></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/logout">Logout</a>
-          </li>
-        <% } else { %>
-          <li class="nav-item">
-            <a class="nav-link" href="/login">Login</a>
-          </li>
-        <% } %>
-      </ul>
-    </div>
-  </nav>
-  
+
+  <%- include('partials/navbar') %>
+
   <div class="container mt-5">
-    <h1>User Profile</h1>
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Profile Information</h5>
-        <p class="card-text"><strong>Name:</strong> <%= user.firstName +' '+user.lastName %></p>
+        <p class="card-text"><strong>Name:</strong> <%= user.firstName +' '+user.lastName %></p>        
         <p class="card-text"><strong>Email:</strong> <%= user.email %></p>
-        <!-- <p class="card-text"><strong>Age:</strong> <%= user.age %></p> -->
-        <a href="/profile/edit" class="btn btn-primary">Edit Profile</a>
+        <a href="/logout" class="btn btn-primary">logout</a>
+
       </div>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
