--- a/views/searchHotelsPage.ejs
+++ b/views/searchHotelsPage.ejs
@@ -8,6 +8,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+  <%- include('partials/navbar')%>
   <div class="container mt-5">
     <h1>Search Hotels</h1>
     <form id="searchForm">
