--- a/views/partials/adminNavbar.ejs
+++ b/views/partials/adminNavbar.ejs
@@ -1,6 +1,6 @@
 <!-- views/partials/_adminNavbar.ejs -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a href="/admin" class="text-light text-decoration-none "><h2>Admin Dashboard</h2></a>
+    <a href="/admin/dashboard" class="text-light text-decoration-none "><h2>Admin Dashboard</h2></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
